--- a/src/usr.sbin/ldpd/ldpd.conf.5
+++ b/src/usr.sbin/ldpd/ldpd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ldpd.conf.5,v 1.7 2012/04/24 14:56:09 jmc Exp $
+.\"	$OpenBSD: ldpd.conf.5,v 1.8 2012/08/29 20:15:19 jmc Exp $
 .\"
 .\" Copyright (c) 2009 Michele Marchetto <michele@openbsd.org>
 .\" Copyright (c) 2005, 2006 Esben Norby <norby@openbsd.org>
@@ -18,7 +18,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: April 24 2012 $
+.Dd $Mdocdate: August 29 2012 $
 .Dt LDPD.CONF 5
 .Os
 .Sh NAME
@@ -62,7 +62,8 @@ interface em0 {
 }
 .Ed
 .Sh GLOBAL CONFIGURATION
-Global settings concerns the main behaviour of the daemon.
+All interface related settings can be configured globally and per interface.
+The only settings that can be set globally and not overruled are listed below.
 .Pp
 .Bl -tag -width Ds -compact
 .It Xo
@@ -82,18 +83,6 @@ Set the router ID; in combination with labelspace it forms the LSR-ID.
 .It Ic labelspace Ar number
 Set the label space advertised by
 .Xr ldpd 8 .
-.Pp
-.It Ic holdtime Ar seconds
-Set the hello holdtime in seconds.
-The maximum time
-.Xr ldpd 8
-will wait between two consecutive hello messages from a peer before it is
-marked as being down.
-The default value is 15.
-.Pp
-.It Ic hello-interval Ar seconds
-Set the hello interval in seconds.
-The default value is 5; valid range is 1\-65535.
 .Pp
 .It Ic keepalive Ar seconds
 Set the keepalive interval in seconds.
@@ -142,8 +131,17 @@ interface em0 {
 .Pp
 Interface-specific parameters are listed below.
 .Bl -tag -width Ds
-.It Ic passive
-Prevent transmission and reception of LDP packets on this interface.
+.It Ic holdtime Ar seconds
+Set the hello holdtime in seconds.
+The maximum time
+.Xr ldpd 8
+will wait between two consecutive hello messages from a peer before it is
+marked as being down.
+The default value is 15.
+.Pp
+.It Ic hello-interval Ar seconds
+Set the hello interval in seconds.
+The default value is 5; valid range is 1\-65535.
 .El
 .Sh FILES
 .Bl -tag -width "/etc/ldpd.conf" -compact
