--- a/src/usr.bin/bgplg/bgplg.8
+++ b/src/usr.bin/bgplg/bgplg.8
@@ -1,6 +1,6 @@
-.\"	$OpenBSD: bgplg.8,v 1.8 2010/10/13 08:28:30 sthen Exp $
+.\"	$OpenBSD: bgplg.8,v 1.9 2010/10/13 18:56:03 sthen Exp $
 .\"
-.\" Copyright (c) 2005, 2006 Reyk Floeter <reyk@vantronix.net>
+.\" Copyright (c) 2005, 2006 Reyk Floeter <reyk@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -189,7 +189,7 @@ commercial internet exchange point.
 The
 .Nm
 program was written by
-.An Reyk Floeter Aq reyk@vantronix.net .
+.An Reyk Floeter Aq reyk@openbsd.org .
 .Sh CAVEATS
 To prevent commands from running endlessly,
 .Nm
