--- a/src/share/man/man4/an.4
+++ b/src/share/man/man4/an.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: an.4,v 1.37 2009/09/02 07:00:24 jmc Exp $
+.\"	$OpenBSD: an.4,v 1.38 2013/02/14 07:40:42 jmc Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu>. All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/an.4,v 1.5 2000/03/02 14:53:45 sheldonh Exp $
 .\"
-.Dd $Mdocdate: September 2 2009 $
+.Dd $Mdocdate: February 14 2013 $
 .Dt AN 4
 .Os
 .Sh NAME
@@ -139,10 +139,10 @@ dhcp
 .Ed
 .Sh DIAGNOSTICS
 .Bl -diag
-.It "an%d: failed to allocate %d bytes on NIC"
+.It "an0: failed to allocate N bytes on NIC"
 The driver was unable to allocate memory for transmit frames in the
 NIC's on-board RAM.
-.It "an%d: device timeout"
+.It "an0: device timeout"
 The Aironet card failed to generate an interrupt to acknowledge a transmit
 command.
 .El
