--- a/src/share/man/man4/aue.4
+++ b/src/share/man/man4/aue.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: aue.4,v 1.33 2007/11/10 22:58:24 deraadt Exp $
+.\"	$OpenBSD: aue.4,v 1.34 2012/08/18 08:44:25 jmc Exp $
 .\"	$NetBSD: aue.4,v 1.9 2002/07/11 00:23:31 rh Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
@@ -33,7 +33,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man4/aue.4,v 1.2 2000/01/07 22:18:47 wpaul Exp $
 .\"
-.Dd $Mdocdate: November 10 2007 $
+.Dd $Mdocdate: August 18 2012 $
 .Dt AUE 4
 .Os
 .Sh NAME
@@ -170,11 +170,11 @@ For more information on configuring this device, see
 .Xr ifconfig 8 .
 .Sh DIAGNOSTICS
 .Bl -diag
-.It "aue%d: watchdog timeout"
+.It "aue0: watchdog timeout"
 A packet was queued for transmission and a transmit command was
 issued, however the device failed to acknowledge the transmission
 before a timeout expired.
-.It "aue%d: no memory for rx list"
+.It "aue0: no memory for rx list"
 The driver failed to allocate an mbuf for the receiver ring.
 .El
 .Sh SEE ALSO
