--- a/src/share/man/man4/iwi.4
+++ b/src/share/man/man4/iwi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: iwi.4,v 1.43 2012/09/17 11:04:24 sthen Exp $
+.\" $OpenBSD: iwi.4,v 1.44 2013/02/14 07:40:42 jmc Exp $
 .\"
 .\" Copyright (c) 2004
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 17 2012 $
+.Dd $Mdocdate: February 14 2013 $
 .Dt IWI 4
 .Os
 .Sh NAME
@@ -128,10 +128,10 @@ dhcp
 .Ed
 .Sh DIAGNOSTICS
 .Bl -diag
-.It "iwi%d: device timeout"
+.It "iwi0: device timeout"
 The driver will reset the hardware.
 This should not happen.
-.It "iwi%d: error %d, could not read firmware %s"
+.It "iwi0: error N, could not read firmware ..."
 For some reason, the driver was unable to read the firmware image from the
 filesystem.
 The file might be missing or corrupted.
