--- a/src/share/man/man4/man4.sparc/spif.4
+++ b/src/share/man/man4/man4.sparc/spif.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: spif.4,v 1.15 2007/05/31 19:19:56 jmc Exp $
+.\"     $OpenBSD: spif.4,v 1.16 2010/07/10 19:38:39 miod Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: July 10 2010 $
 .Dt SPIF 4 sparc
 .Os
 .Sh NAME
@@ -74,9 +74,9 @@ Parallel ports
 .El
 .Sh DIAGNOSTICS
 .Bl -diag
-.It "spif%d: ccr timeout"
+.It "spif0: ccr timeout"
 A timeout occurred while writing to one of the CD180 registers.
-.It "stty%d-%d: ring overflow"
+.It "stty0-N: ring overflow"
 Incoming characters were discarded because the application
 in control of the device did not read the input fast enough.
 .El
