--- a/src/lib/libc/sys/tame.2
+++ b/src/lib/libc/sys/tame.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: tame.2,v 1.14 2015/07/28 18:12:57 jmc Exp $
+.\" $OpenBSD: tame.2,v 1.15 2015/07/28 18:20:41 deraadt Exp $
 .\"
 .\" Copyright (c) 2015 Nicholas Marriott <nicm@openbsd.org>
 .\"
@@ -340,6 +340,7 @@ operations:
 .Dv FIONREAD ,
 .Dv FIONBIO ,
 .Dv FIOGETOWN ,
+.Dv TIOCGPGRP ,
 .Dv TIOCGWINSZ ,
 .Dv TIOCSTI .
 .It Dv TAME_PROC
