--- a/src/usr.sbin/radiusctl/radiusctl.8
+++ b/src/usr.sbin/radiusctl/radiusctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: radiusctl.8,v 1.1 2015/08/03 04:10:21 yasuoka Exp $
+.\"	$OpenBSD: radiusctl.8,v 1.2 2015/08/03 07:45:05 jmc Exp $
 .\"
 .\" Copyright (c) YASUOKA Masahiko <yasuoka@yasuoka.net>
 .\"
@@ -23,7 +23,6 @@
 .Nd control the RADIUS protocol daemon
 .Sh SYNOPSIS
 .Nm
-.Op Fl h
 .Ar command
 .Op Ar argument ...
 .Sh DESCRIPTION
