--- a/src/lib/libc/sys/kbind.2
+++ b/src/lib/libc/sys/kbind.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: __tfork_thread.3,v 1.3 2015/01/15 19:26:27 schwarze Exp $
+.\" $OpenBSD: kbind.2,v 1.1 2015/08/25 19:58:04 guenther Exp $
 .\"
 .\" Copyright (c) 2015 Philip Guenther <guenther@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: January 15 2015 $
+.Dd $Mdocdate: August 25 2015 $
 .Dt KBIND 2
 .Os
 .Sh NAME
@@ -83,7 +83,7 @@ is used, the kernel records both the text address of the call and
 the value of the
 .Fa cookie
 argument.
-If those values differ in a latter
+If those values differ in a later
 .Nm
 call, then the process is killed.
 .Sh RETURN VALUES
