--- a/src/lib/libc/sys/tame.2
+++ b/src/lib/libc/sys/tame.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: tame.2,v 1.17 2015/08/22 20:18:50 deraadt Exp $
+.\" $OpenBSD: tame.2,v 1.18 2015/08/26 05:20:06 doug Exp $
 .\"
 .\" Copyright (c) 2015 Nicholas Marriott <nicm@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 22 2015 $
+.Dd $Mdocdate: August 26 2015 $
 .Dt TAME 2
 .Os
 .Sh NAME
@@ -369,6 +369,7 @@ operations:
 .Dv FIONREAD ,
 .Dv FIONBIO ,
 .Dv FIOGETOWN ,
+.Dv TIOCGETA ,
 .Dv TIOCGPGRP ,
 .Dv TIOCGWINSZ ,
 .Dv TIOCSTI .
