--- a/src/usr.bin/less/less.1
+++ b/src/usr.bin/less/less.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: less.1,v 1.44 2014/11/23 08:01:06 bentley Exp $
+.\"	$OpenBSD: less.1,v 1.45 2014/11/23 09:56:32 jmc Exp $
 .\"
 .\" Copyright (C) 1984-2012  Mark Nudelman
 .\"
@@ -1144,15 +1144,6 @@ is defined.
 See also the discussion of LESSEDIT under the section on
 .Sx PROMPTS
 below.
-.It Ic \&! Ar shell-command
-Invokes a shell to run the shell-command given.
-A percent sign (%) in the command is replaced by the name of the current file.
-A pound sign (#) is replaced by the name of the previously examined file.
-"!!" repeats the last shell command.
-"!" with no shell command simply invokes a shell.
-The shell is taken from the environment variable
-.Ev SHELL ,
-or defaults to "sh".
 .It Ic | <m> Ar shell-command
 <m> represents any mark letter.
 Pipes a section of the input file to the given shell command.
@@ -1788,8 +1779,6 @@ is set to 1,
 runs in a "secure" mode.
 This means these features are disabled:
 .Bl -tag -width Ds
-.It \&!
-The shell command.
 .It |
 The pipe command.
 .It :e
@@ -2009,7 +1998,7 @@ automatically when running in
 .Xr more 1
 compatible mode.
 .It Ev SHELL
-The shell used to execute the ! command, as well as to expand filenames.
+The shell used to expand filenames.
 .It Ev TERM
 Specifies the terminal type.
 Used by
