--- a/src/share/man/man9/printf.9
+++ b/src/share/man/man9/printf.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: printf.9,v 1.22 2015/09/14 15:14:55 schwarze Exp $
+.\"	$OpenBSD: printf.9,v 1.23 2015/11/02 04:49:28 mmcc Exp $
 .\"     $NetBSD: kprintf.9,v 1.6 1999/03/16 00:40:47 garbled Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -28,7 +28,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 14 2015 $
+.Dd $Mdocdate: November 2 2015 $
 .Dt PRINTF 9
 .Os
 .Sh NAME
@@ -126,9 +126,7 @@ for functional details.
 The kernel functions don't support as many formatting specifiers as their
 user space counterparts.
 In addition to the floating point formatting specifiers,
-the following integer type specifiers are not supported in the format string
-.Fa format
-either:
+the following integer type specifiers are not supported:
 .Bl -tag -width 5n
 .It Li %hh
 Argument of
@@ -148,9 +146,7 @@ Argument of
 type.
 .El
 .Pp
-The kernel functions also accept the following format specifiers
-in the format string
-.Fa format :
+The kernel functions support some additional formatting specifiers:
 .Bl -tag -width 5n
 .It Li %b
 Bit field expansion.
