--- a/src/usr.bin/less/less.1
+++ b/src/usr.bin/less/less.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: less.1,v 1.46 2015/11/06 15:58:01 nicm Exp $
+.\"	$OpenBSD: less.1,v 1.47 2015/11/06 16:20:37 tedu Exp $
 .\"
 .\" Copyright (C) 1984-2012  Mark Nudelman
 .\"
@@ -524,13 +524,6 @@ for example, there may be a file in the current directory called
 which was previously built by
 .Xr ctags 1
 or an equivalent command.
-If the environment variable
-.Ev LESSGLOBALTAGS
-is set, it is taken to be the name of a command compatible with
-.Em global ,
-and that command is executed to find the tag.
-(See
-.Lk https://www.gnu.org/software/global/global.html . )
 The
 .Fl t
 option may also be specified from within
@@ -1910,12 +1903,6 @@ Command line to invoke the (optional) input-postprocessor.
 Editor prototype string (used for the v command).
 See discussion under
 .Sx PROMPTS .
-.It Ev LESSGLOBALTAGS
-Name of the command used by the
-.Fl t
-option to find global tags.
-Normally should be set to "global" if your system has the global command.
-If not set, global tags are not used.
 .It Ev LESSHISTFILE
 Name of the history file used to remember search commands and
 shell commands between invocations of
