--- a/src/usr.bin/less/less.1
+++ b/src/usr.bin/less/less.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: less.1,v 1.47 2015/11/06 16:20:37 tedu Exp $
+.\"	$OpenBSD: less.1,v 1.48 2015/11/08 08:53:49 nicm Exp $
 .\"
 .\" Copyright (C) 1984-2012  Mark Nudelman
 .\"
@@ -23,7 +23,7 @@
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: November 6 2015 $
+.Dd $Mdocdate: November 8 2015 $
 .Dt LESS 1
 .Os
 .Sh NAME
@@ -1970,9 +1970,3 @@ is used.
 .Xr more 1
 .Sh AUTHORS
 .An Mark Nudelman .
-.Pp
-Send bug reports or comments to
-.Aq Mt bug-less@gnu.org .
-.Pp
-For more information, see the less homepage at
-.Lk http://www.greenwoodsoftware.com/less .
