--- a/src/share/man/man4/man4.amd64/vmm.4
+++ b/src/share/man/man4/man4.amd64/vmm.4
@@ -12,7 +12,7 @@
 .\"WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 .\"ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\"OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 13 2015 $
 .Dt VMM 4 amd64
 .Os
 .Sh NAME
@@ -58,13 +58,11 @@ host capacity.
 The
 .Nm
 driver requires suitable host CPU capabilites in order to provide
-VM services. Currently, the
+VM services. The
 .Nm
 driver requires at least one CPU with hardware-assisted virtualization
-capabillities. Presently, the
-.Nm
-driver requires nested or extended paging capabilities to be
-supported by the host CPU. For more information, consult your CPU
+capabillities and nested or extended paging capabilities to be
+present on the host. For more information, consult your CPU
 vendor's documentation.
 .Sh SEE ALSO
 .Xr cpu 4 ,
