--- a/src/usr.bin/telnet/telnet.1
+++ b/src/usr.bin/telnet/telnet.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: telnet.1,v 1.56 2015/10/25 14:12:55 jca Exp $
+.\"	$OpenBSD: telnet.1,v 1.57 2015/11/13 16:46:30 deraadt Exp $
 .\"	$NetBSD: telnet.1,v 1.5 1996/02/28 21:04:12 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993
@@ -30,7 +30,7 @@
 .\"
 .\"	from: @(#)telnet.1	8.4 (Berkeley) 2/3/94
 .\"
-.Dd $Mdocdate: October 25 2015 $
+.Dd $Mdocdate: November 13 2015 $
 .Dt TELNET 1
 .Os
 .Sh NAME
@@ -1288,13 +1288,6 @@ Suspend
 .Nm telnet .
 This command only works when the user is using a shell with
 job control enabled.
-.It Ic \&! Op Ar command
-Execute a single command in a subshell on the local
-system.
-If
-.Ar command
-is omitted, then an interactive
-subshell is invoked.
 .It Ic \&? Op Ar command
 Get help.
 With no arguments,
