--- a/src/lib/libform/form_cursor.3
+++ b/src/lib/libform/form_cursor.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_cursor.3,v 1.7 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH form_cursor 3 ""
 .SH NAME
-\fBform_cursor\fR - position a form window cursor
+\fBpos_form_cursor\fR - position a form window cursor
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
