--- a/src/lib/libform/form_data.3
+++ b/src/lib/libform/form_data.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_data.3,v 1.11 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH form_data 3 ""
 .SH NAME
-\fBform_data\fR - test for off-screen data in given forms
+\fBdata_ahead\fR, \fBdata_behind\fR - test for off-screen data in given forms
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
