--- a/src/lib/libform/form_field_info.3
+++ b/src/lib/libform/form_field_info.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_field_info.3,v 1.9 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2005,2006 Free Software Foundation, Inc.              *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH form_field_info 3 ""
 .SH NAME
-\fBform_field_info\fR - retrieve field characteristics
+\fBfield_info\fR, \fBdynamic_field_info\fR - retrieve field characteristics
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
