--- a/src/lib/libform/form_field_just.3
+++ b/src/lib/libform/form_field_just.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_field_just.3,v 1.9 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2003,2006 Free Software Foundation, Inc.              *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH form_field_just 3 ""
 .SH NAME
-\fBform_field_just\fR - retrieve field characteristics
+\fBset_field_just\fR, \fBfield_just\fR - retrieve field characteristics
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
