--- a/src/lib/libform/form_field_validation.3
+++ b/src/lib/libform/form_field_validation.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD$
+.\" $OpenBSD: form_field_validation.3,v 1.9 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2003,2006 Free Software Foundation, Inc.              *
@@ -31,7 +31,8 @@
 .\" $Id$
 .TH form_field_validation 3 ""
 .SH NAME
-\fBform_field_validation\fR - data type validation for fields
+\fBset_field_type\fR, \fBfield_type\fR,
+\fBfield_arg\fR - data type validation for fields
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
