--- a/src/lib/libform/form_fieldtype.3
+++ b/src/lib/libform/form_fieldtype.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_fieldtype.3,v 1.11 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2003,2006 Free Software Foundation, Inc.              *
@@ -32,7 +32,9 @@
 .\" $Id$
 .TH form_fieldtype 3 ""
 .SH NAME
-\fBform_fieldtype\fR - define validation-field types
+\fBnew_fieldtype\fR, \fBfree_fieldtype\fR,
+\fBset_fieldtype_arg\fR, \fBset_fieldtype_choice\fR,
+\fBlink_fieldtype\fR - define validation-field types
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
