--- a/src/lib/libform/form_new.3
+++ b/src/lib/libform/form_new.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_new.3,v 1.8 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,7 @@
 .\" $Id$
 .TH form_new 3 ""
 .SH NAME
-\fBform_new\fR - create and destroy forms
+\fBnew_form\fR, \fBfree_form\fR - create and destroy forms
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
