--- a/src/lib/libform/form_opts.3
+++ b/src/lib/libform/form_opts.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_opts.3,v 1.9 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998-2006,2007 Free Software Foundation, Inc.              *
@@ -32,7 +32,9 @@
 .\" $Id$
 .TH form_opts 3 ""
 .SH NAME
-\fBform_opts\fR - set and get form options
+\fBset_form_opts\fR, \fBform_opts_on\fR,
+\fBform_opts_off\fR, \fBform_opts\fR
+- set and get form options
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
