--- a/src/lib/libform/form_post.3
+++ b/src/lib/libform/form_post.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_post.3,v 1.7 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,8 @@
 .\" $Id$
 .TH form_post 3 ""
 .SH NAME
-\fBform_post\fR - write or erase forms from associated subwindows
+\fBpost_form\fR, \fBunpost_form\fR
+- write or erase forms from associated subwindows
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
