--- a/src/lib/libform/form_win.3
+++ b/src/lib/libform/form_win.3
@@ -1,5 +1,5 @@
 '\" t
-.\" $OpenBSD$
+.\" $OpenBSD: form_win.3,v 1.9 2010/01/12 23:22:07 nicm Exp $
 .\"
 .\"***************************************************************************
 .\" Copyright (c) 1998,2006 Free Software Foundation, Inc.                   *
@@ -32,7 +32,9 @@
 .\" $Id$
 .TH form_win 3 ""
 .SH NAME
-\fBform_win\fR - make and break form window and subwindow associations
+\fBset_form_win\fR, \fBform_win\fR,
+\fBset_form_sub\fR, \fBform_sub\fR,
+\fBscale_form\fR - make and break form window and subwindow associations
 .SH SYNOPSIS
 \fB#include <form.h>\fR
 .br
