--- a/src/share/man/man9/VOP_LOOKUP.9
+++ b/src/share/man/man9/VOP_LOOKUP.9
@@ -1,4 +1,4 @@
-.\" $OpenBSD: VOP_LOOKUP.9,v 1.26 2014/09/08 01:27:55 schwarze Exp $
+.\" $OpenBSD: VOP_LOOKUP.9,v 1.27 2015/07/05 18:24:50 millert Exp $
 .\"
 .\" Copyright (c) 2003 Ted Unangst
 .\" All rights reserved.
@@ -23,7 +23,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 8 2014 $
+.Dd $Mdocdate: July 5 2015 $
 .Dt VOP_LOOKUP 9
 .Os
 .Sh NAME
@@ -366,7 +366,7 @@ Convert the logical block number
 .Fa bn
 of the file the locked vnode
 .Fa vp
-is associated with to its physical number on-disk.
+is associated with its physical number on-disk.
 The physical block number is stored in
 .Fa *bnp
 on return.
