--- a/src/usr.bin/ssh/ssh_config.5
+++ b/src/usr.bin/ssh/ssh_config.5
@@ -33,8 +33,8 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ssh_config.5,v 1.221 2015/09/24 06:15:11 djm Exp $
-.Dd $Mdocdate: September 24 2015 $
+.\" $OpenBSD: ssh_config.5,v 1.222 2015/11/15 22:26:49 jcs Exp $
+.Dd $Mdocdate: November 15 2015 $
 .Dt SSH_CONFIG 5
 .Os
 .Sh NAME
@@ -223,7 +223,7 @@ keyword matches against the name of the local user running
 files).
 .It Cm AddKeysToAgent
 Specifies whether keys should be automatically added to a running
-.Xr ssh-agent 5 .
+.Xr ssh-agent 1 .
 If this option is set to
 .Dq yes
 and a key is loaded from a file, the key and its passphrase are added to
