--- a/src/lib/libc/sys/pledge.2
+++ b/src/lib/libc/sys/pledge.2
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pledge.2,v 1.14 2015/11/16 18:29:34 deraadt Exp $
+.\" $OpenBSD: pledge.2,v 1.15 2015/11/16 19:26:21 jmc Exp $
 .\"
 .\" Copyright (c) 2015 Nicholas Marriott <nicm@openbsd.org>
 .\"
@@ -472,7 +472,7 @@ process:
 .Xr setlogin 2 ,
 .Xr setrlimit 2 ,
 .Xr getpriority 2 ,
-.Xr setpriority 2
+.Xr setpriority 2 .
 .El
 .Pp
 A whitelist of permitted paths may be provided in
