--- a/src/bin/ed/ed.1
+++ b/src/bin/ed/ed.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ed.1,v 1.64 2015/06/22 14:46:59 jmc Exp $
+.\"	$OpenBSD: ed.1,v 1.65 2015/09/14 20:06:58 schwarze Exp $
 .\"
 .\" Copyright (c) 1993 Andrew Moore, Talke Studio.
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: June 22 2015 $
+.Dd $Mdocdate: September 14 2015 $
 .Dt ED 1
 .Os
 .Sh NAME
@@ -836,8 +836,7 @@ that the result of a user defined prompt
 being turned off then on again with the
 .Ic P
 command should restore the user defined prompt;
-this implementation currently restores the default prompt
-.Pq * .
+this implementation currently restores the user defined prompt.
 .Sh HISTORY
 An
 .Nm
